# 264-heif-gimp-plugin

./: .gitignore  CMakeLists.txt  README.md
img/: Camera.heif  Cat.heif  test.heif
include/: config.h
include/heif/common/: OutputStreamInterface.h  heifallocator.h  heifcommondatatypes.h  heifexport.h  heifid.h  heifstreaminterface.h
include/heif/reader/: heifreader.h  heifreaderdatatypes.h
include/heif/writer/: heifwriter.h  heifwriterdatatypes.h
src/: main.cpp
